--- a/Resume.tex
+++ b/Resume.tex
@@ -174,7 +174,7 @@
 \vspace{8pt}
 \resumeItemListStart
 \resumeItem{Cyberattack Analytics Dashboard}
-{Developed a Web Application which visualized statistics on cyberattacks 
+{Developed a Web Application which visualized statistics on cyberattacks.
   On display in the CDOC (Cyber-Defense Operations Center)}
 \resumeItem{HoloFlight}
 {Participated in the OneWeek hackathon, where I worked on HoloFlight, an
