--- a/Resume.tex
+++ b/Resume.tex
@@ -258,7 +258,7 @@ new algorithms.}
   team. Computer vision can locate tennis balls in an image and segment a keyboard into
   keys. The inverse kinematics algorithm was created by myself and another member of the
   team and implemented by me. Available at
-  \href{https://github.com/save-buffer/robot\_cv}{github.com/save-buffer/robot\_cv},p
+  \href{https://github.com/save-buffer/robot\_cv}{github.com/save-buffer/robot\_cv},
   \href{https://github.com/save-buffer/UseArm}{github.com/save-buffer/UseArm}}
 \resumeItem{Slang}
 {Compiler for a low-level functional declarative language (like Erlang) written in C.
