Added honors and updated robotics

--- a/Resume.tex
+++ b/Resume.tex
@@ -145,7 +145,7 @@
 \vspace{4pt}
 \resumeSubheading
 {Husky Robotics}{Seattle, WA}
-{Software Team Lead}{June 2018 - Present}
+{Software Team Lead}{June 2018 - October 2019}
 \vspace{8pt}
 \resumeItemListStart
 \resumeItem{Husky Robotics Software Team}
@@ -188,7 +188,7 @@
 \vspace{8pt}
 \begin{tabular*}{0.97\textwidth}{@{\extracolsep{\fill}}lrr}
   \textbf{University of Washington} & Overall GPA: 3.69 & Seattle, WA \\
-  {\small BS Computer Science} & {\small In-Major GPA: 3.79} & {\small June 2020} \\
+  {\small BS Computer Science with Honors} & {\small In-Major GPA: 3.79} & {\small June 2020} \\
   {\small BS Discrete Mathematics} & {\small In-Major GPA: 3.63} & {\small June 2020} \\
 \end{tabular*}\vspace{-5pt}
 
