Fix FB Internship Date

--- a/Resume.tex
+++ b/Resume.tex
@@ -113,7 +113,7 @@
 \vspace{4pt}
 \resumeSubheading
 {Facebook}{Menlo Park, CA}
-{Software Engineering Intern: Oculus Application Platform Team}{June 2019 - Present}
+{Software Engineering Intern: Oculus Application Platform Team}{June 2019 - September 2019}
 \vspace{8pt}
 \resumeItemListStart
 \resumeItem{Swift Playgrounds on Windows}
