--- a/Resume.tex
+++ b/Resume.tex
@@ -183,11 +183,12 @@ and distributed systems.
   engineers in understanding query plans and its bottlenecks, ultimately allowing for
   more efficient query tuning.}
 \resumeItem{Vectorized Aggregation}
-{Achieved a 1.8x improvement on analytical workloads such as the TPCH benchmark by
-  vectorizing summation using AVX2, improving runtime of internal components by up to 20x.}
+{Designed and implemented algorithms for vectorized summation using AVX2. Achieved 1.8x
+  speedup of queries involving summations, improving runtime of internal components by up
+  to 20x.}
 \resumeItem{Hash Join Optimization}
-{Achieved 2x performance improvement on hash joins involving integer keys, a key usecase for
-star-schema workloads.}
+{Implemented an optimization to improve performance of hash joins involving integer keys
+  by 2x, a key usecase for star-schema workloads.}
 \resumeItemListEnd
 \resumeSubheading
 {Microsoft}{Redmond, WA}
