Add reading group leadership

--- a/Resume.tex
+++ b/Resume.tex
@@ -130,6 +130,9 @@ and distributed systems.
 \resumeItem{Code Maintenance}
 {Proposed, designed, and implemented a significant refactor of core columnstore code,
   dramatically increasing maintanability and understandability.}
+\resumeItem{Reading Group Lead}
+{Led discussions of cutting-edge academic papers on a variety of topics including GPU-based
+  query execution, learned indices, and E-graphs.}
 \resumeItem{Intern Mentor}
 {Mentored a summer intern who developed heuristics for various runtime decisions during
   query execution.}
@@ -193,12 +196,6 @@ and distributed systems.
 \resumeSubheading
 {Microsoft}{Redmond, WA}
 {High School Intern}{June 2016 - August 2016}
-\vspace{2pt}
-\resumeItemListStart
-\resumeItem{Cyberattack Analytics Dashboard}
-{Developed a Web Application which visualized statistics on cyberattacks.
-  On display in the Cyber-Defense Operations Center.}
-\resumeItemListEnd
 \resumeSubHeadingListEnd
 
 \fakesection{Education}
