--- a/Resume.tex
+++ b/Resume.tex
@@ -137,7 +137,7 @@ and distributed systems.
 {Mentored a summer intern who developed heuristics for various runtime decisions during
   query execution.}
 \resumeItem{Interviewer}
-{Interviewed prospective intern and new-grad candidates in both English and Russian.}
+{Interviewed intern and new-grad candidates.}
 \resumeItemListEnd
 \vspace{2pt}
 \resumeSubheading
