Reword regression hunting

--- a/Resume.tex
+++ b/Resume.tex
@@ -122,12 +122,12 @@ and distributed systems.
   \href{https://www.singlestore.com/blog/a-programmers-perspective/}{blog post}.}
 \resumeItem{GPU-based Query Execution}
 {Proposed and drafted a design for GPU-based query execution, winning an internal contest
-  for so-called ``moonshot ideas''. Prototyped summation on GPUs in an internal hackathon
+  for so-called ``moonshot ideas''. Prototyped aggregation on GPUs in an internal hackathon
   achieving a 2.5x speedup over CPU execution, demonstrating the promise of this approach.}
 \resumeItem{Regression Hunting}
-{Found and fixed several unexplained performance regressions caused by the team switching
-  compilers.}
-\resumeItem{Code Maintenance}
+{Compared assembly code between old and new compilers, and provided necessary compiler hints
+  (such as forcing inlining) to fix performance regressions.}
+\resumeItem{Streamlined Columnstore Query Execution Codebase}
 {Proposed, designed, and implemented a significant refactor of core columnstore code,
   dramatically increasing maintanability and understandability.}
 \resumeItem{Reading Group Lead}
