--- a/Resume.tex
+++ b/Resume.tex
@@ -116,9 +116,21 @@ faster. I am interested in any of low-level optimization, heterogeneous computin
 and distributed systems. 
 \fakesection{Experience}
 \resumeSubHeadingListStart
-
+\resumeSubheading{Neon}{Remote (Seattle, WA)}
+{Systems Software Engineer}{March 2023 - Present}
+\resumeItemListStart
+\resumeItem{Network Monitoring}
+{Implemented an eBPF-based ingress/egress network monitoring solution for Neon's VM infrastructure.}
+\resumeItem{DiskANN}
+{Prototyped a high performance DiskANN implementation with the eventual goal of getting put into
+  a Postgres extension. Outperformed libhnsw's index build by 2x}
+\resumeItem{Role Management}
+{Implemented Neon's role management, including synchronization between compute and control plane
+  and UI changes.}
+\resumeItemListEnd
+\vspace{2pt}
 \resumeSubheading{Voltron Data}{Remote (Seattle, WA)}
-{Software Engineer}{October 2021 - Present}
+{Software Engineer}{October 2021 - March 2023}
 \resumeItemListStart
 \resumeItem{Hash Join Spilling}
 {Designed and implemented a solution to joining larger-than-memory datasets by partitioning
